<?xml version="1.0" encoding="UTF-8"?><resources><string name="androidAppModule32string0">androidAppModule32string0</string>
<string name="androidAppModule32string1">androidAppModule32string1</string>
<string name="androidAppModule32string2">androidAppModule32string2</string>
<string name="androidAppModule32string3">androidAppModule32string3</string>
<string name="androidAppModule32string4">androidAppModule32string4</string>
<string name="androidAppModule32string5">androidAppModule32string5</string>
<string name="androidAppModule32string6">androidAppModule32string6</string>
<string name="androidAppModule32string7">androidAppModule32string7</string>
<string name="androidAppModule32string8">androidAppModule32string8</string>
<string name="androidAppModule32string9">androidAppModule32string9</string>
<string name="androidAppModule32string10">androidAppModule32string10</string>
<string name="androidAppModule32string11">androidAppModule32string11</string>
<string name="androidAppModule32string12">androidAppModule32string12</string>
<string name="androidAppModule32string13">androidAppModule32string13</string>
<string name="androidAppModule32string14">androidAppModule32string14</string>
<string name="androidAppModule32string15">androidAppModule32string15</string>
<string name="androidAppModule32string16">androidAppModule32string16</string>
<string name="androidAppModule32string17">androidAppModule32string17</string>
<string name="androidAppModule32string18">androidAppModule32string18</string>
<string name="androidAppModule32string19">androidAppModule32string19</string>
<string name="androidAppModule32string20">androidAppModule32string20</string>
<string name="androidAppModule32string21">androidAppModule32string21</string>
<string name="androidAppModule32string22">androidAppModule32string22</string>
<string name="androidAppModule32string23">androidAppModule32string23</string>
<string name="androidAppModule32string24">androidAppModule32string24</string>
<string name="androidAppModule32string25">androidAppModule32string25</string>
<string name="androidAppModule32string26">androidAppModule32string26</string>
<string name="androidAppModule32string27">androidAppModule32string27</string>
<string name="androidAppModule32string28">androidAppModule32string28</string>
<string name="androidAppModule32string29">androidAppModule32string29</string>
<string name="androidAppModule32string30">androidAppModule32string30</string>
<string name="androidAppModule32string31">androidAppModule32string31</string>
<string name="androidAppModule32string32">androidAppModule32string32</string>
<string name="androidAppModule32string33">androidAppModule32string33</string>
<string name="androidAppModule32string34">androidAppModule32string34</string>
<string name="androidAppModule32string35">androidAppModule32string35</string>
<string name="androidAppModule32string36">androidAppModule32string36</string>
<string name="androidAppModule32string37">androidAppModule32string37</string>
<string name="androidAppModule32string38">androidAppModule32string38</string>
<string name="androidAppModule32string39">androidAppModule32string39</string>
<string name="androidAppModule32string40">androidAppModule32string40</string>
<string name="androidAppModule32string41">androidAppModule32string41</string>
<string name="androidAppModule32string42">androidAppModule32string42</string>
<string name="androidAppModule32string43">androidAppModule32string43</string>
<string name="androidAppModule32string44">androidAppModule32string44</string>
<string name="androidAppModule32string45">androidAppModule32string45</string>
<string name="androidAppModule32string46">androidAppModule32string46</string>
<string name="androidAppModule32string47">androidAppModule32string47</string>
<string name="androidAppModule32string48">androidAppModule32string48</string>
<string name="androidAppModule32string49">androidAppModule32string49</string>
<string name="androidAppModule32string50">androidAppModule32string50</string>
<string name="androidAppModule32string51">androidAppModule32string51</string>
<string name="androidAppModule32string52">androidAppModule32string52</string>
<string name="androidAppModule32string53">androidAppModule32string53</string>
<string name="androidAppModule32string54">androidAppModule32string54</string>
<string name="androidAppModule32string55">androidAppModule32string55</string>
<string name="androidAppModule32string56">androidAppModule32string56</string>
<string name="androidAppModule32string57">androidAppModule32string57</string>
<string name="androidAppModule32string58">androidAppModule32string58</string>
<string name="androidAppModule32string59">androidAppModule32string59</string>
<string name="androidAppModule32string60">androidAppModule32string60</string>
<string name="androidAppModule32string61">androidAppModule32string61</string>
<string name="androidAppModule32string62">androidAppModule32string62</string>
<string name="androidAppModule32string63">androidAppModule32string63</string>
<string name="androidAppModule32string64">androidAppModule32string64</string>
<string name="androidAppModule32string65">androidAppModule32string65</string>
<string name="androidAppModule32string66">androidAppModule32string66</string>
<string name="androidAppModule32string67">androidAppModule32string67</string>
<string name="androidAppModule32string68">androidAppModule32string68</string>
<string name="androidAppModule32string69">androidAppModule32string69</string>
<string name="androidAppModule32string70">androidAppModule32string70</string>
<string name="androidAppModule32string71">androidAppModule32string71</string>
<string name="androidAppModule32string72">androidAppModule32string72</string>
<string name="androidAppModule32string73">androidAppModule32string73</string>
<string name="androidAppModule32string74">androidAppModule32string74</string>
<string name="androidAppModule32string75">androidAppModule32string75</string>
<string name="androidAppModule32string76">androidAppModule32string76</string>
<string name="androidAppModule32string77">androidAppModule32string77</string>
<string name="androidAppModule32string78">androidAppModule32string78</string>
<string name="androidAppModule32string79">androidAppModule32string79</string>
<string name="androidAppModule32string80">androidAppModule32string80</string>
<string name="androidAppModule32string81">androidAppModule32string81</string>
<string name="androidAppModule32string82">androidAppModule32string82</string>
<string name="androidAppModule32string83">androidAppModule32string83</string>
<string name="androidAppModule32string84">androidAppModule32string84</string>
<string name="androidAppModule32string85">androidAppModule32string85</string>
<string name="androidAppModule32string86">androidAppModule32string86</string>
<string name="androidAppModule32string87">androidAppModule32string87</string>
<string name="androidAppModule32string88">androidAppModule32string88</string>
<string name="androidAppModule32string89">androidAppModule32string89</string>
<string name="androidAppModule32string90">androidAppModule32string90</string>
<string name="androidAppModule32string91">androidAppModule32string91</string>
<string name="androidAppModule32string92">androidAppModule32string92</string>
<string name="androidAppModule32string93">androidAppModule32string93</string>
<string name="androidAppModule32string94">androidAppModule32string94</string>
<string name="androidAppModule32string95">androidAppModule32string95</string>
<string name="androidAppModule32string96">androidAppModule32string96</string>
<string name="androidAppModule32string97">androidAppModule32string97</string>
<string name="androidAppModule32string98">androidAppModule32string98</string>
<string name="androidAppModule32string99">androidAppModule32string99</string>
<string name="androidAppModule32string100">androidAppModule32string100</string>
<string name="androidAppModule32string101">androidAppModule32string101</string>
</resources>