<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
        android:id="@+id/androidappmodule32activity_main99androidAppModule32string990"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule32string99"
        
/><TextView
        android:id="@+id/androidappmodule32activity_main99androidAppModule32string1001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule32string100"
        
/><TextView
        android:id="@+id/androidappmodule32activity_main99androidAppModule32string1012"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/androidAppModule32string101"
        
/>
            <ImageView
        android:id="@+id/androidappmodule32activity_main99androidappmodule32image990"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule32image99"
        
/>
            <ImageView
        android:id="@+id/androidappmodule32activity_main99androidappmodule32image1001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule32image100"
        
/>
            <ImageView
        android:id="@+id/androidappmodule32activity_main99androidappmodule32image1012"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule32image101"
        
/>
            <ImageView
        android:id="@+id/androidappmodule32activity_main99androidappmodule32image1023"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule32image102"
        
/>
            <ImageView
        android:id="@+id/androidappmodule32activity_main99androidappmodule32image1034"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule32image103"
        
/>
            <ImageView
        android:id="@+id/androidappmodule32activity_main99androidappmodule32image1045"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/androidappmodule32image104"
        
/>
            
            
        </LinearLayout>
    </ScrollView>